WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102048
Unable to set valid time value to input[type=time] with user interaction in some cases
https://bugs.webkit.org/show_bug.cgi?id=102048
Summary
Unable to set valid time value to input[type=time] with user interaction in s...
Kent Tamura
Reported
2012-11-12 22:07:53 PST
http://code.google.com/p/chromium/issues/detail?id=160501
e.g. data:text/html,<input type=time value="12:00:00" min="11:59:01"> In this case, the default step is 1 minute and valid values are 11:59:01, 12:00:01, 12:01:01, .... However the second field is read-only because of incorrect implementation of DateTimeEditBuilder::shouldSecondFieldReadOnly.
Attachments
Patch
(20.04 KB, patch)
2012-11-12 22:23 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch for landing
(20.07 KB, patch)
2012-11-12 23:51 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-11-12 22:23:15 PST
Created
attachment 173824
[details]
Patch
Kentaro Hara
Comment 2
2012-11-12 23:01:01 PST
Comment on
attachment 173824
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=173824&action=review
> Source/WebCore/ChangeLog:43 > + (WebCore::Decimal::remainder): > + Fix a bug in case that the fractional part of quotient is >= 0.5. Also > + make this matches to C99, C++11, ECMAScript behavior.
The change looks sane, but won't it affect something else?
Kent Tamura
Comment 3
2012-11-12 23:06:10 PST
Comment on
attachment 173824
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=173824&action=review
>> Source/WebCore/ChangeLog:43 >> + make this matches to C99, C++11, ECMAScript behavior. > > The change looks sane, but won't it affect something else?
AFAIK we have had only Decimal::remainder().isZero() in the production code, and this patch is the first user of non-zero value.
WebKit Review Bot
Comment 4
2012-11-12 23:39:47 PST
Comment on
attachment 173824
[details]
Patch Rejecting
attachment 173824
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14822322
Kent Tamura
Comment 5
2012-11-12 23:51:08 PST
Created
attachment 173836
[details]
Patch for landing
WebKit Review Bot
Comment 6
2012-11-13 00:36:44 PST
Comment on
attachment 173836
[details]
Patch for landing Rejecting
attachment 173836
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Died at Tools/Scripts/update-webkit line 154. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 9 f text inputs with content: url(...) When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 154. Full output:
http://queues.webkit.org/results/14809786
WebKit Review Bot
Comment 7
2012-11-13 01:38:09 PST
Comment on
attachment 173836
[details]
Patch for landing Rejecting
attachment 173836
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: should have value profiling When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 154. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 9 ror: 1 Died at Tools/Scripts/update-webkit line 154. Full output:
http://queues.webkit.org/results/14815531
Kent Tamura
Comment 8
2012-11-13 02:19:07 PST
Committed
r134390
: <
http://trac.webkit.org/changeset/134390
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug