Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.cpp
@@ -409,7 +409,7 @@ int BaseMultipleFieldsDateAndTimeInputType::fullYear(const String& source) const
 bool BaseMultipleFieldsDateAndTimeInputType::shouldHaveSecondField(const DateComponents& date) const
 {
     StepRange stepRange = createStepRange(AnyIsDefaultStep);
-    return date.second()
+    return date.second() || date.millisecond()
         || !stepRange.minimum().remainder(static_cast<int>(msPerMinute)).isZero()
         || !stepRange.step().remainder(static_cast<int>(msPerMinute)).isZero();
 }
